Fixed excerpt overflow

--- a/src/css/frontend/blog.css
+++ b/src/css/frontend/blog.css
@@ -62,12 +62,23 @@
 	}
 }
 
-.post-image-above-header.post-image-aligned-left div.post-image {
-	margin-right: 1em;
-}
+@media (min-width: 769px) {
 
-.post-image-above-header.post-image-aligned-right div.post-image {
-	margin-left: 1em;
+	.post-image-aligned-left .crdm-modern-excerpt .entry-header,
+	.post-image-aligned-left .crdm-modern-excerpt .entry-summary {
+		margin-left: calc(300px + 1em);
+	}
+
+	.post-image-aligned-right .crdm-modern-excerpt .entry-header,
+	.post-image-aligned-right .crdm-modern-excerpt .entry-summary {
+		margin-right: calc(300px + 1em);
+	}
+
+	.generate-columns .crdm-modern-excerpt .entry-header,
+	.generate-columns .crdm-modern-excerpt .entry-summary {
+		margin-left: 1em;
+		margin-right: 1em;
+	}
 }
 
 .post-image-aligned-center .crdm-modern-excerpt .post-image,
